--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
        *  On load, called to load the auth2 library and API client library.
        */
       function handleClientLoad() {
+        console.log(gapi);
         gapi.load('client:auth2', initClient);
       }
 
